--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
     <script>
         // === CẤU HÌNH API - NHẬP API KEYS TẠI ĐÂY ===
         let CONFIG = {
-            openaiApiKey: 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, // ← NHẬP OPENAI API KEY TẠI ĐÂY (dạng: sk-...)
-            googleApiKey: AIzaSyD5uBLWsQL6z-B_yPrJXIk2fbxMXehR8fU, // ← NHẬP GOOGLE DRIVE API KEY TẠI ĐÂY (dạng: AIza...)
+            openaiApiKey: " ", // ← NHẬP OPENAI API KEY TẠI ĐÂY (dạng: sk-...)
+            googleApiKey: " ", // ← NHẬP GOOGLE DRIVE API KEY TẠI ĐÂY (dạng: AIza...)
             folderId: '1uIrX9anqJGZUZttJHWQJR3iTIkNkWnn1', // ID thư mục Google Drive
             model: 'gpt-4',
             maxTokens: 1000,
